#1071 Fix add dataset to existing dataflow error (#1137)
* #1071 Fix add dataset to existing dataflow error

* #1071 Fix overlapping css in add to dataflow popup(in dataset detail)

--- a/discovery-frontend/src/assets/css/metatron/component/component.table.css
+++ b/discovery-frontend/src/assets/css/metatron/component/component.table.css
@@ -202,7 +202,7 @@ table.ddp-table-select tbody tr.ddp-selected td:last-of-type {border-right:1px s
 table.ddp-table-select tbody tr td .ddp-box-tag {position:relative; top:2px;}
 table.ddp-table-type2.ddp-table-select tbody tr.ddp-selected > td {padding:12px 10px 13px 10px}
 table.ddp-table-type2.ddp-table-select tbody tr.ddp-selected > td:first-of-type {padding-left:9px;}
-table.ddp-table-type2.ddp-table-select tbody tr.ddp-selected > td:last-of-type {padding-right:9px;}
+table.ddp-table-type2.ddp-table-select tbody tr.ddp-selected > td:last-of-type {padding-right:29px;}
 
 table.ddp-table-select tr td:last-of-type {padding-right:35px;}
 table.ddp-table-select tbody tr.ddp-selected td:first-child:before {border-left:1px solid #666eb2;}
